+ Added atkDateFormat function which can be used to do localized formatting
  of a time stamp, compatible with PHP's date function. [Peter]
+ Added Prototype UI window library which will eventually replace window.js
  and improves stability for atkDialog. [Peter]
+ Added atkthemeicon Smarty plug-in for including theme icons inside
  templates. [Peter]
+ Added fetchByPk to atkNode. [Michael]
* Added check for edit privilege when NF_EDITAFTERADD is set [Yannick]
* Fixed a small bug with the fuzzy filters. [Erik]
* Made the gathering of selected records in extendableshuttle a bit more 
  efficient [Erik]
* modified the deleteAll method to use the query builder, this fixes a issue
  which needed escaping of table names. Also added a dropAll method to the 
  mysqldb that does table escaping. [Erik] 
* Added empty string check at the atkMlSplitter for primary key values that 
  cannot be NULL and made the language key always uppercase [Yannick]
+ Added UI resource for Smarty which makes it easier to include templates
  somehwere inside your ATK root e.g. {include file="ui:modules/..."} [Peter]
* Upgraded Prototype to 1.6.0.2, Scriptaculous to 1.8.1 and Window.js to
  1.3.2. Might cause certain backwards incompatiblities! [Peter]
* Admin datagrids can now be modified from within the node by implementing 
  the modifyDataGrid($grid) method. [Peter]
* One-to-many relation datagrid can now be modified by implementing the
  modifyDataGrid($grid) method inside the destination node or by
  implementing an <attribute>_modifyDataGrid($grid) method inside the
  owner node. [Peter]
* The default datagrid template now reserves space for components named top
  or bottom, which makes it easy to add your own custom components 
  without having the need to create a custom template. [Peter]
* Multi-record-action modes MRA_SINGLE_SELECT and MRA_NO_SELECT 
  are now properly supported by the datagrid. [Peter]
* atkMetaPolicy's remove method now takes multiple arguments. [Peter]